objects/Bread_Winner__Line_Item__c.object
<CustomObject>
    <description>Invoice Line Items</description>
    <fields>
        <fullName>Bread_Winner__Account_Code__c</fullName>
        <description>Account Reference Id</description>
        <label>Account Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Description__c</fullName>
        <description>Line Description</description>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Discount_Rate__c</fullName>
        <description>Percentage discount being applied to a line item</description>
        <label>Discount Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Bread_Winner__Invoice__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Item_Code__c</fullName>
        <description>Item Reference Id</description>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Line_Amount_2_Decimals__c</fullName>
        <formula>Bread_Winner__Line_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Line_Amount__c</fullName>
        <label>Line Amount (4 Decimals)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Line_Item_Id__c</fullName>
        <description>LineItemID, external reference Id of line item</description>
        <label>Line Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Quantity_2_Decimals__c</fullName>
        <formula>Bread_Winner__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Quantity__c</fullName>
        <label>Quantity (4 Decimals)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Tax_Amount_2_Decimals__c</fullName>
        <formula>Bread_Winner__Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Tax_Amount__c</fullName>
        <label>Tax Amount (4 Decimals)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Tax_Type__c</fullName>
        <description>TaxType reference</description>
        <label>Tax Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Tracking_Category_1__c</fullName>
        <label>Tracking Category 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Tracking_Category_2__c</fullName>
        <label>Tracking Category 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Unit_Price_2_Decimals__c</fullName>
        <formula>Bread_Winner__Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Unit_Price__c</fullName>
        <description>UnitAmount</description>
        <label>Unit Price (4 Decimals)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>Bread_Winner__All</fullName>
        <columns>NAME</columns>
        <columns>Bread_Winner__Invoice__c</columns>
        <columns>Bread_Winner__Description__c</columns>
        <columns>Bread_Winner__Item_Code__c</columns>
        <columns>Bread_Winner__Quantity_2_Decimals__c</columns>
        <columns>Bread_Winner__Unit_Price_2_Decimals__c</columns>
        <columns>Bread_Winner__Discount_Rate__c</columns>
        <columns>Bread_Winner__Line_Amount_2_Decimals__c</columns>
        <columns>Bread_Winner__Tax_Amount_2_Decimals__c</columns>
        <columns>Bread_Winner__Account_Code__c</columns>
        <columns>Bread_Winner__Tax_Type__c</columns>
        <columns>Bread_Winner__Tracking_Category_1__c</columns>
        <columns>Bread_Winner__Tracking_Category_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>